
0.0.8
 - Reorganized, moved q-io to the top level.
 - Reved dependencies.
 - Moved q-io-buffer to its own project.

0.0.3
 - reved up Q to version 0.2 so duck-promises will work

0.0.2
 - added buffer-io
 - added buffer mode to readers and writers

0.0.1
 - fixed dependency on broken q package
 - restructured for overlay style packaging compatibility
